--- a/pom.xml
+++ b/pom.xml
@@ -3,5 +3,5 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.alexspeal</groupId>
   <artifactId>SummerPractice</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 </project>
